// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with valid target should set headers matching snapshot 1`] = `
Object {
  "headers": Object {
    "X-Correlation-Id": "test-correlation-id",
    "X-Graphql-Target": "mc",
    "X-Project-Key": "project-1",
  },
}
`;

exports[`with valid target with project key in variables should set headers matching snapshot 1`] = `
Object {
  "headers": Object {
    "X-Correlation-Id": "test-correlation-id",
    "X-Graphql-Target": "mc",
    "X-Project-Key": "test-project-key",
  },
}
`;
